[tool]
[tool.black]
line-length = 100

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \btutorials\b
    | \bbuild\b
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.poetry]
name = "ner-adahessian"
version = "0.0.1"
description = "Adahessian test"

license = "MIT"

authors = [
    "Bruno <bruno@potelo.com.br>"
]



[tool.poetry.dependencies]
python = ">=3.7,<3.9"
torch = ">=1.6.0"
allennlp = {version = "==1.1.0rc2"}
allennlp-models = {version = "==1.1.0rc2"}



